# smart-coder

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .woodpecker.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.woodpecker/: ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/kotlin/: AiCoreBackend.kt  NativeBridge.kt
crates/dc-android/: Cargo.toml
crates/dc-android/src/: lib.rs
crates/dc-cli/: Cargo.toml
crates/dc-cli/src/: lib.rs  main.rs
crates/dc-context/: Cargo.toml
crates/dc-context/src/: budget.rs  lib.rs  tokens.rs
crates/dc-core/: Cargo.toml
crates/dc-core/src/: advisor.rs  agent.rs  confirm.rs  diagnose.rs  event.rs  lib.rs  planner.rs  recovery.rs  runlog.rs  strategy.rs  text.rs  tool.rs
crates/dc-core/src/agent/: assemble.rs  dispatch.rs  escalation.rs  mod.rs  prompt.rs  stall.rs  test_util.rs  tests.rs  window.rs
crates/dc-core/tests/: context_budget.rs  events.rs  recovery_loop.rs  tdd_loop.rs  validity.rs
crates/dc-eval/: Cargo.toml
crates/dc-eval/src/: fsutil.rs  lib.rs  main.rs  report.rs  runner.rs  solver.rs  task.rs
crates/dc-eval/tests/: suite_smoke.rs
crates/dc-index/: Cargo.toml
crates/dc-index/src/: lib.rs  symbols.rs  workspace.rs
crates/dc-mcp/: Cargo.toml
crates/dc-mcp/src/: jobs.rs  lib.rs  main.rs  protocol.rs  tools.rs
crates/dc-model/: Cargo.toml
crates/dc-model/src/: constraint.rs  lib.rs  openai.rs
crates/dc-proto/: Cargo.toml
crates/dc-swarm/: Cargo.toml
crates/dc-swarm/src/: decompose.rs  event.rs  lib.rs  orchestrator.rs  worker.rs
crates/dc-swarm/tests/: swarm_run.rs
crates/dc-tools/: Cargo.toml
crates/dc-tools/src/: builtin.rs  journal.rs  lib.rs  permission.rs  spec.rs
crates/dc-tui/: Cargo.toml
crates/dc-tui/examples/: headless.rs
crates/dc-tui/src/: app.rs  lib.rs  render.rs  state.rs
crates/dc-tui/tests/: render_smoke.rs
crates/dc-verify/: Cargo.toml
crates/dc-web/: Cargo.toml
crates/dc-web/src/: dashboard.html  hub.rs  lib.rs  server.rs  swarm_dashboard.html  swarm_server.rs
crates/dc-win/: Cargo.toml
crates/dc-win/examples/: drive_lakes_build.rs  drive_lakes_plan.rs  drive_lakes_render.rs  live_iterate.rs  live_session.rs  live_swarm.rs  live_swarm_default.rs  live_tdd.rs  prove_game_iterate.rs  prove_plan_workflow.rs
crates/dc-win/src/: app.rs  board.rs  bridge.rs  canvas.rs  chat.rs  chat_session.rs  codeview.rs  comments.rs  config.rs  filetree.rs  gitdiff.rs  lib.rs  linecomment.rs  main.rs  minimap.rs  persist.rs  plan.rs  session.rs  topology.rs  view.rs  welcome.rs
crates/dc-win/tests/: ab_compare.rs  ab_hard.rs  ab_ladder.rs  ab_multifile.rs  ab_scale.rs  ab_winfind.rs  live_tdd.rs
crates/dc-workflow/: Cargo.toml
crates/dc-workflow/src/: coverage.rs  engine.rs  lib.rs  phase.rs  runner.rs  sequential.rs  stack.rs  staged.rs  state.rs  testwriter.rs
crates/sc-android/: Cargo.toml
crates/sc-android/src/: lib.rs
crates/sc-cli/: Cargo.toml
crates/sc-cli/src/: lib.rs  main.rs
crates/sc-context/: Cargo.toml
crates/sc-context/src/: budget.rs  history.rs  lib.rs  tokens.rs  truncate.rs
crates/sc-core/: Cargo.toml
crates/sc-core/src/: advisor.rs  confirm.rs  diagnose.rs  event.rs  lib.rs  metrics.rs  plan.rs  planner.rs  recovery.rs  strategy.rs
crates/sc-core/src/agent/: assemble.rs  dispatch.rs  escalation.rs  mod.rs  prompt.rs  stall.rs  test_util.rs  tests.rs  window.rs
crates/sc-core/tests/: context_budget.rs  events.rs  recovery_loop.rs  tdd_loop.rs  validity.rs
crates/sc-eval/: Cargo.toml
crates/sc-eval/src/: fsutil.rs  lib.rs  main.rs  report.rs  runner.rs  solver.rs  task.rs
crates/sc-eval/tests/: suite_smoke.rs
crates/sc-index/: Cargo.toml
crates/sc-iterate/: Cargo.toml
crates/sc-iterate/src/: lib.rs  proc.rs  verify.rs
crates/sc-model/: Cargo.toml
crates/sc-model/src/: constraint.rs  dotenv.rs  lib.rs  openai.rs  transcript.rs
crates/sc-proto/: Cargo.toml
crates/sc-swarm/: Cargo.toml
crates/sc-swarm/src/: board.rs  decompose.rs  event.rs  lib.rs  orchestrator.rs  worker.rs
crates/sc-swarm/tests/: swarm_run.rs
crates/sc-tools/: Cargo.toml
crates/sc-tools/src/: builtin.rs  grammar.rs  journal.rs  lib.rs
crates/sc-tui/: Cargo.toml
crates/sc-tui/examples/: headless.rs
crates/sc-tui/src/: app.rs  lib.rs  render.rs  state.rs
crates/sc-tui/tests/: render_smoke.rs
crates/sc-verify/: Cargo.toml
crates/sc-web/: Cargo.toml
crates/sc-web/src/: dashboard.html  hub.rs  iterate_server.rs  lib.rs  mirror_server.rs  remote_confirm.rs  server.rs  swarm_dashboard.html  swarm_server.rs
crates/sc-web/tests/: serve_http.rs
crates/sc-win/: Cargo.toml  build.rs
crates/sc-win/examples/: drive_lakes_build.rs  drive_lakes_plan.rs  drive_lakes_render.rs  live_iterate.rs  live_session.rs  live_swarm.rs  live_swarm_default.rs  live_tdd.rs  prove_game_iterate.rs  prove_plan_workflow.rs
crates/sc-win/src/: app.rs  board.rs  bridge.rs  canvas.rs  chat.rs  chat_session.rs  codeview.rs  comments.rs  config.rs  filetree.rs  gitdiff.rs  lib.rs  linecomment.rs  main.rs  minimap.rs  persist.rs  plan.rs  proc.rs  session.rs  splits.rs  terminal.rs  topology.rs  view.rs
crates/sc-win/src/app/: helpers.rs  logic_a.rs  logic_b.rs  logic_c.rs  mod.rs  styles.rs  types.rs  update.rs  view_code.rs  view_core.rs  view_menus.rs  view_panels.rs
crates/sc-win/tests/: ab_compare.rs  ab_hard.rs  ab_ladder.rs  ab_multifile.rs  ab_scale.rs  ab_winfind.rs  live_tdd.rs
crates/sc-workflow/: Cargo.toml
crates/sc-workflow/src/: compile_driven.rs  coverage.rs  engine.rs  gate.rs  lib.rs  phase.rs  policy.rs  runner.rs  sequential.rs  stack.rs  staged.rs  state.rs  testwriter.rs
crates/sc-workflow/tests/: live_duplication.rs  live_fix.rs
docs/: next-session-m9.md  plan-conversational-ide.md  timing-report.md
evals/: suite.toml
examples/: README.md
scripts/: check.ps1  check.sh  coder-30b.ps1  pool-8b.ps1
site/: index.html  script.js  styles.css
(+62 files in other folders)
