[workspace]
resolver = "2"
members = [
    "crates/dc-proto",
    "crates/dc-model",
    "crates/dc-tools",
    "crates/dc-context",
    "crates/dc-index",
    "crates/dc-verify",
    "crates/dc-core",
    "crates/dc-swarm",
    "crates/dc-workflow",
    "crates/dc-tui",
    "crates/dc-win",
    "crates/dc-web",
    "crates/dc-cli",
    "crates/dc-eval",
    "crates/dc-android",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jamez667/dumb-coder"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
