[workspace]
resolver = "2"
members = [
    "crates/sc-proto",
    "crates/sc-model",
    "crates/sc-tools",
    "crates/sc-context",
    "crates/sc-index",
    "crates/sc-verify",
    "crates/sc-android",
    "crates/sc-core",
    "crates/sc-iterate",
    "crates/sc-swarm",
    "crates/sc-workflow",
    "crates/sc-tui",
    "crates/sc-win",
    "crates/sc-web",
    "crates/sc-cli",
    "crates/sc-eval",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jamez667/smart-coder"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
