[package]
name = "dc-android"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JNI bridge: expose the dumb-coder agent core to the Android app."

[lib]
# cdylib -> the .so the Android app loads; rlib -> so the pure helpers are unit-testable on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
dc-proto = { path = "../dc-proto" }
dc-model = { path = "../dc-model" }
dc-core = { path = "../dc-core" }
jni = "0.21"
