[package]
name = "dc-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "dumb-coder CLI: doctor + chat against a real small-model backend (M0)."

[[bin]]
name = "dumb-coder"
path = "src/main.rs"

[dependencies]
dc-proto = { path = "../dc-proto" }
dc-model = { path = "../dc-model" }
