[package]
name = "dc-context"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Context Manager: hard token budget, prioritized zones, truncation, compaction (spec 05)."

[dependencies]
dc-proto = { path = "../dc-proto" }
dc-model = { path = "../dc-model" }
