[package]
name = "dc-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The dumb-coder agent loop: drive a ModelBackend through tool calls."

[dependencies]
dc-proto = { path = "../dc-proto" }
dc-model = { path = "../dc-model" }
dc-tools = { path = "../dc-tools" }
dc-context = { path = "../dc-context" }
dc-index = { path = "../dc-index" }
dc-verify = { path = "../dc-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
