[package]
name = "dc-eval"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The dumb-coder eval harness: score a solver on red->green tasks."

[lib]
name = "dc_eval"
path = "src/lib.rs"

[[bin]]
name = "dc-eval"
path = "src/main.rs"

[dependencies]
dc-proto = { path = "../dc-proto" }
dc-model = { path = "../dc-model" }
dc-core = { path = "../dc-core" }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
