[package]
name = "dc-index"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Retrieval index: tree-sitter symbol graph + PageRank repo map + lexical search (spec 05)."

[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
streaming-iterator = "0.1"
tree-sitter-c-sharp = "0.23.5"
