[package]
name = "dc-mcp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server exposing dumb-coder as a fire-and-poll parallel coding agent over stdio (spec 06)."

[[bin]]
name = "dumb-coder-mcp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
