[package]
name = "dc-tui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Full-screen TUI that visualizes a live agent run from the event stream (spec 01/06)."

[dependencies]
dc-core = { path = "../dc-core" }
dc-model = { path = "../dc-model" }
dc-tools = { path = "../dc-tools" }
dc-proto = { path = "../dc-proto" }
ratatui = "0.30"
crossterm = "0.29"
