[package]
name = "dc-web"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local web dashboard: stream a live agent run to the browser over SSE (spec 01/06)."

[dependencies]
dc-core = { path = "../dc-core" }
dc-model = { path = "../dc-model" }
dc-tools = { path = "../dc-tools" }
dc-proto = { path = "../dc-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
