[package]
name = "dc-win"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Windows vibe-coding desktop app: type intent, watch the agent/swarm work over the proven core (spec 12 / M9)."

[[bin]]
name = "dc-win"
path = "src/main.rs"

[lib]
name = "dc_win"
path = "src/lib.rs"

[dependencies]
dc-core = { path = "../dc-core" }
dc-swarm = { path = "../dc-swarm" }
dc-workflow = { path = "../dc-workflow" }
dc-model = { path = "../dc-model" }
dc-tools = { path = "../dc-tools" }
dc-verify = { path = "../dc-verify" }
dc-proto = { path = "../dc-proto" }
iced = { version = "0.14", features = ["tokio", "canvas", "advanced"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rfd = "0.17"
serde_json = { workspace = true }
tokio = { version = "1.52.4", features = ["rt"] }
