[package]
name = "dc-workflow"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The staged workflow & checkpoints (spec 09): specs→architecture→layout→stages→plan→decomposition, gated."

[dependencies]
dc-proto = { path = "../dc-proto" }
dc-model = { path = "../dc-model" }
dc-core = { path = "../dc-core" }
dc-swarm = { path = "../dc-swarm" }
dc-verify = { path = "../dc-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
