[package]
name = "sc-android"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JNI bridge: expose the smart-coder agent core to the Android app (on-device mode)."

[lib]
# cdylib -> the .so the Android app loads; rlib -> the pure helpers stay host-testable.
crate-type = ["cdylib", "rlib"]

[dependencies]
sc-proto = { path = "../sc-proto" }
sc-model = { path = "../sc-model" }
sc-core = { path = "../sc-core" }
sc-tools = { path = "../sc-tools" }
jni = "0.21"
