[package]
name = "sc-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The smart-coder agent loop: drive a ModelBackend through tool calls."

[dependencies]
sc-proto = { path = "../sc-proto" }
sc-model = { path = "../sc-model" }
sc-tools = { path = "../sc-tools" }
sc-context = { path = "../sc-context" }
sc-index = { path = "../sc-index" }
sc-verify = { path = "../sc-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
