[package]
name = "sc-web"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local web dashboard: stream a live agent run to the browser over SSE (spec 01/06)."

[dependencies]
sc-core = { path = "../sc-core" }
sc-model = { path = "../sc-model" }
sc-tools = { path = "../sc-tools" }
sc-proto = { path = "../sc-proto" }
sc-swarm = { path = "../sc-swarm" }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
