[package]
name = "sc-workflow"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The staged workflow & checkpoints (spec 09): specs→architecture→layout→stages→plan→decomposition, gated."

[dependencies]
sc-proto = { path = "../sc-proto" }
sc-model = { path = "../sc-model" }
sc-core = { path = "../sc-core" }
sc-swarm = { path = "../sc-swarm" }
sc-verify = { path = "../sc-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
